# omnidatum

./: .gitignore  ARCHIVE.md  ARCHIVE_TABLE.md  CONTENT.md  Cargo.toml  LIST.md  README.md  TABLE.md  clippy.toml
.github/workflows/: ci.yml
crates/od-core/: Cargo.toml
crates/od-core/benches/: bench_data.rs  query_benchmarks.rs
crates/od-core/src/: lib.rs
crates/od-generate/: Cargo.toml
crates/od-generate/src/: markdown.rs
crates/od-graph/: Cargo.toml
crates/od-store/: Cargo.toml
crates/od-store/src/: dual.rs  lib.rs  sqlite.rs  traits.rs  (+1 more)
crates/od-sync/: Cargo.toml
crates/od-validate/: Cargo.toml
crates/repoquery/: Cargo.toml
crates/repoquery/src/: main.rs
crates/repoquery/src/commands/: activity.rs  completions.rs  config.rs  configure.rs  expand.rs  mod.rs  tui.rs
crates/repoquery/src/commands/query/: languages.rs  list.rs  mod.rs  search.rs  show.rs  topics.rs
crates/repoquery/src/output/: chart.rs  csv.rs  json.rs  markdown.rs  mod.rs  table.rs
crates/repoquery/tests/: cli_e2e.rs  test_data.yml
data/cache/: sync_metadata.json  sync_quality_report.json
data/canonical/: repositories.yml
data/templates/: list.md.tera  table.md.tera
docs/: ARCHITECTURE.md  CLI_COMMAND_REFERENCE.md  CONFIGURATION.md  SECURITY_PRACTICES.md  SPECS_PORTED_FROM_REPOSQL.md  STORAGE_MODES.md
reports/: archived_repos.json  archived_repos.md  audit_all_repos.md  cleanup_candidates.md  domain_analysis.md  moved_repos.json  nonhealthy_analysis.md  stale_repos.json
scripts/: analyze_healthy.py  apply_tags.py  audit_all_repos.py  classify_nonhealthy.py
(+20 files in other folders)
